<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:shrinkColumns="0,1,2" >

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/firstButton"
            android:textSize="@dimen/textSize"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:backgroundTint="@color/green" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/secondButton"
            android:textSize="@dimen/textSize"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:backgroundTint="@color/design_default_color_error" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/thirdButton"
            android:textSize="@dimen/textSize"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:backgroundTint="@color/orange" />
    </TableRow>

    <TableRow
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:weightSum="2">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/fourthButton"
            android:textSize="@dimen/textSize"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:backgroundTint="@color/yellow" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/fifthButton"
            android:textSize="@dimen/textSize"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:backgroundTint="@color/pink" />
    </TableRow>

</TableLayout>