<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5"
    android:orientation="vertical">



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstButton"
        android:textSize="@dimen/textSize"
        android:layout_weight="1"
        android:gravity="center"
        android:backgroundTint="@color/orange"
        android:textAllCaps="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/secondButton"
        android:textSize="@dimen/textSize"
        android:layout_weight="1.66"
        android:firstBaselineToTopHeight="10dp"
        android:gravity="center"
        android:backgroundTint="@color/purple_500"
        android:textAllCaps="false" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/thirdButton"
        android:textSize="@dimen/textSize"
        android:layout_weight="1"
        android:gravity="center"
        android:backgroundTint="@color/green"
        android:textAllCaps="false" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/firstButton"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"
            android:gravity="center"
            android:backgroundTint="@color/orange"
            android:textAllCaps="false" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/secondButton"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"
            android:gravity="center"
            android:backgroundTint="@color/purple_500"
            android:textAllCaps="false" />


        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/thirdButton"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"
            android:gravity="center"
            android:backgroundTint="@color/green"
            android:textAllCaps="false" />
    </LinearLayout>

    <Button
        android:id="@+id/linearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/commonMargin"
        android:text="Click To Go To Relative Layout"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:backgroundTint="@color/bloodRed"
        android:textSize="20dp"
        android:textStyle="bold" />


</LinearLayout>